--- a/src/style.css
+++ b/src/style.css
@@ -2,3 +2,11 @@ body {
     background-color: aquamarine;
 
 }
+
+.title {
+        color: #000000;
+        background: aquamarine;
+        text-shadow: 2px 2px 0 #251d1d, 4px 4px 0 #9c9c9c;
+        color:rgb(12, 16, 15);
+        background: aquamarine;
+        }
