--- a/src/style.css
+++ b/src/style.css
@@ -9,4 +9,12 @@ body {
         text-shadow: 2px 2px 0 #251d1d, 4px 4px 0 #9c9c9c;
         color:rgb(12, 16, 15);
         background: aquamarine;
-        }
+        };
+
+.watchlist {
+    color: #000000;
+    background:red;
+    text-shadow: 2px 2px 0 #251d1d, 4px 4px 0 #9c9c9c;
+    color:rgb(12, 16, 15);
+    background: aquamarine;
+} 
